fix: break to mobile layout earlier to avoid menu overflow

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,4 +1,5 @@
 $link: #4787fb;
+$navbar-breakpoint: 1150px;
 
 @import "theme/_main";
 
